@@ -1,6 +1,13 @@
 2015-03-16  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Sync with GCC
+	2015-02-18  Thomas Schwinge  <thomas@codesourcery.com>
+
+	* elf.m4 (ACX_ELF_TARGET_IFELSE): nvptx-*-none isn't ELF.
+
+2015-03-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Sync with GCC
 	2014-11-17  Bob Dunlop  <bob.dunlop@xyzzy.org.uk>
 
 	* mt-ospace (CFLAGS_FOR_TARGET): Append -g -Os rather than
